@@ -1,9 +1,18 @@
+2002-09-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* lisp/nnheader.el (toplevel) [XEmacs]: Define `emacs-mule' coding
+	system in order to cancel difference on coding systems of
+	auto-saved files between FSF Emacs and XEmacs.
+	(nnheader-auto-save-coding-system) [Mule]: The default value of
+	Mule2 is changed from `*junet*' to `*internal*', in order to unify
+	coding system of files auto-saved by Mule2.
+
 2002-09-08  Daiki Ueno  <ueno@unixuser.org>
 
 	* lisp/gnus-msg.el (gnus-configure-posting-styles): Follow the
 	change of arglist of gnus-configure-posting-style.
 	(gnus-configure-posting-style): Check circular import.
-	
+
 2002-09-08  Daiki Ueno  <ueno@unixuser.org>
 
 	* lisp/gnus-vers.el (gnus-revision-number): Increment to 03.
@@ -27,7 +36,7 @@
 	(gnus-configure-posting-styles): Expand named entries in
 	gnus-posting-styles.
 	(gnus-summary-execute-command-with-posting-style): New command.
-	
+
 2002-09-06  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* lisp/gnus-vers.el (gnus-revision-number): Increment to 01.
